--- a/client/package.json
+++ b/client/package.json
@@ -1,18 +1,14 @@
 {
-  "name": "electron-quick-start",
+  "name": "iter_4",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "A productivity oriented app",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
-  "repository": "https://github.com/electron/electron-quick-start",
+  "repository": "https://github.com/nightwraid/final-iter",
   "keywords": [
     "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
   ],
   "author": "GitHub",
   "license": "CC0-1.0",
@@ -25,6 +21,7 @@
     "datatables.net-bs4": "^1.10.19",
     "fs": "0.0.1-security",
     "graceful-fs": "^4.1.11",
+    "hamburgers": "^1.1.3",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.1",
     "quill": "^1.3.6",
