Added logout routing to app and server

--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "repository": "https://github.com/nightwraid/final-iter",
   "keywords": [
     "Electron",
+    "productivity"
   ],
   "author": "GitHub",
   "license": "CC0-1.0",
